k8s/kustomize/docker-registry/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: docker-registry
spec:
  selector:
    app: registry
  type: NodePort
  ports:
    - name: docker-port
      protocol: TCP
      port: 5000
      targetPort: 5000
